Fixed spacing and added home content

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -17,7 +17,15 @@
 
 body {
     font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
-    margin: 7%;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    margin-top: 0%;
+    margin-right: 7%;
+    margin-left: 7%;
+    margin-bottom: 0%;
 }
 
 h1 {
@@ -31,26 +39,45 @@ h2 {
 }
 
 h3 {
-    font-size: 24;
+    font-size: larger;
     font-weight: 600;
+    margin-bottom: 0;
 }
 
 h4 {
     font-weight:normal;
 }
 
+h5 {
+    font-weight: 400;
+    color: gray;
+    font-size: medium;
+}
+
+p {
+    font-weight: normal;
+    font-size:large;
+    line-height: 1.25;
+}
+
 nav {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    padding-top: 3%;
+    padding-bottom: 2%;
 }
 
 .n1 {
-    grid-column: span 3 / span 3;
+    grid-column: span 2 / span 2;
+}
+
+.n1 > h4 {
+    margin: 0px;
 }
 
 .n2 {
-    grid-column: span 2 / span 2;
-    grid-column-start: 4;
+    grid-column: span 3 / span 3;
+    grid-column-start: 3;
 }
 
 nav ul {
@@ -127,8 +154,6 @@ ul {
     margin-right: 5%;
 }
 
-
-
 .sbs1 img {
     width: 100%;
     height: auto;
@@ -140,7 +165,71 @@ ul {
 }
 
 img {
-    border-radius: 25px;
+    border-radius: 7px;
     border-style:solid;
     width: 100%;
+}
+
+.BButton {
+    margin-top: 20px;
+	background-color:#242629;
+	border-radius:5px;
+	border:none;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #232836;
+}
+
+.BButton:hover {
+    background-color: #040405;
+}
+
+.BButton:active {
+    position: relative;
+    top: 1px;
+}
+
+.WButton {
+    margin-top: 20px;
+    background-color: #ebebeb;
+    border: none;
+    border-radius: 5px;
+    display: inline-block;
+    cursor: pointer;
+    color: #000000;
+    font-size: 17px;
+    padding: 16px 31px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
+}
+
+.WButton:hover {
+    background-color: #d4d4d4;
+}
+
+.WButton:active {
+    position: relative;
+    top: 1px;
+}
+
+.help {
+    background-color: lightgray;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.help1 {
+    grid-column: span 2 / span 2;
+}
+.help2 {
+    grid-column: span 5 / span 5;
+    grid-column-start: 3;
+    text-align: right;
 }
